--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+/*.class
 
 # Log file
 *.log
@@ -18,6 +19,14 @@
 *.zip
 *.tar.gz
 *.rar
+
+/*.jar
+/*.war
+/*.nar
+/*.ear
+/*.zip
+/*.tar.gz
+/*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
